--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Bitacora meBooks App</h1>
+    <h2>Operations: Create - Update - Delete - Save - Exit</h2>
     <h6>Powered by EchoGroup</h6>
     
 </body>
