--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Bitacora meBooks App</h1>
     <h2>Operations: Create - Update - Delete - Save - Exit</h2>
+    <hr>
+    <h3>|   ID  |      TITLE       |       AUTHOR     |   GENERE  |   PAGES   |   STATUS  |</h3>
+    
     <h6>Powered by EchoGroup</h6>
     
 </body>
