--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li>El Poder del Ahora</li>
         <li>The Time Machine</li>
     </ol>
+    <br>
+    <h5>Otras Opciones</h5>
+    <hr>
     <h6>Powered by EchoGroup</h6>
     
 </body>
