--- a/index.html
+++ b/index.html
@@ -9,17 +9,54 @@
 </head>
 <body>
     <h1>Bitacora meBooks App</h1>
-    <h2>Operations: Create - Update - Delete - Save - Exit</h2>
+    <h2><a href="#">Create</a> - <a href="#">Read</a> - <a href="#">Update</a> - <a href="#">Delete</a></h2>
     <hr>
-    <h3>|   ID  |      TITLE       |       AUTHOR     |   GENERE  |   PAGES   |   STATUS  |</h3>
     <br>
-    <ol>
-        <li>Frontera Oscura</li>
-        <li>El Poder del Ahora</li>
-        <li>The Time Machine</li>
-    </ol>
+    <table class="table">
+        <tr>
+          <td class="bold">ID</td>
+          <td class="bold">TITLE</td>
+          <td class="bold">AUTHOR</td>
+          <td class="bold">GENERE</td>
+          <td class="bold">PAGES</td>
+          <td class="bold">STATUS</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Frontera Oscura</td>
+          <td>Sabino Cabeza</td>
+          <td>Fiction</td>
+          <td>315</td>
+          <td>Finished</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>El Poder Del Ahora</td>
+          <td>Toel</td>
+          <td>Help</td>
+          <td>200</td>
+          <td>Reading</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>The Time Machine</td>
+          <td>Wells</td>
+          <td>Fiction</td>
+          <td>150</td>
+          <td>Waiting</td>
+        </tr>
+      </table>
+      
     <br>
-    <h5>Otras Opciones</h5>
+    <h5>Derechos Reservados @ 2023</h5>
     <hr>
     <h6>Powered by EchoGroup</h6>
     
