--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meBooks App</title>
     <link rel="stylesheet" href="src/styles.css" >
+    <script src="/src/app.js"></script>
         
 </head>
 <body>
