--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Bitacora meBooks App</h1>
-    <h2><a href="#">Create</a> - <a href="#">Read</a> - <a href="#">Update</a> - <a href="#">Delete</a></h2>
+    <h2><button onclick="creaFun()">Create</button> - <button onclick="reaFun()">Read</button> - <button onclick="upFun()">Update</button> - <button onclick="delFun()">Delete</button></h2>
     <hr>
     <br>
     <table class="table">
@@ -24,7 +24,7 @@
         </tr>
         <tr>
           <td></td>
-          <td></td>
+          <td class="bold" id="title"></td>
           <td></td>
           <td></td>
           <td></td>
