--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <td class="bold">STATUS</td>
       </tr>
     </thead>
-    <tbody id="titles">
+    <tbody id="bodyTable">
     </tbody>
     </table>
   
