--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Bitacora meBooks App</h1>
-    <h2><button onclick="creaFun()">Create</button> - <button onclick="reaFun()">Read</button> - <button onclick="upFun()">Update</button> - <button onclick="delFun()">Delete</button></h2>
+    <h2><button onclick="creaFun()">Create</button> - <button onclick="upFun()">Update</button> - <button onclick="delFun()">Delete</button> - <button onclick="loadFun()">Load</button> - <button onclick="saveFun()">Save</button></h2>
     <hr>
     <br>
 
